[Modifies]Upgrade swagger doc
